# blatann-rs

./: .gitignore  Cargo.toml  README.md
blatann/: Cargo.toml
blatann/examples/: hello_world.rs
blatann/src/: advertise_data.rs  advertiser.rs  connection_waitable.rs  consts.rs  device.rs  event_waitable.rs  events.rs  lib.rs  main.rs  peer.rs  waitable.rs
blatann/src/waitable/: event_waitable.rs  mod.rs
blatann_event/: Cargo.toml
blatann_event/src/: event_waitable.rs  lib.rs  publisher.rs
nrf_driver/: .gitignore  Cargo.toml  build.rs
nrf_driver/src/: ble_event.rs  driver.rs  driver_events.rs  error.rs  event_publisher.rs  events.rs  lib.rs  manager.rs  nrf_driver.rs  nrf_driver_manager.rs  nrf_error.rs  utils.rs
nrf_driver/src/common/: consts.rs  enums.rs  events.rs  mod.rs  types.rs
nrf_driver/src/gap/: enums.rs  events.rs  mod.rs  types.rs
