[package]
name = "nrf_driver"
version = "0.1.0"
authors = ["thomas <tgerst6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "*"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"
