[package]
name = "nrf_driver"
version = "0.1.0"
authors = ["thomas <tgerst6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "*"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"
log = "0.4.11"
uuid = { version = "0.8.1", features = ["v4"] }
bitflags = "1.2.1"
blatann_event = {path = "../blatann_event" }